# libprim

./: .gitignore  BUILD  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  WORKSPACE  build_with_spack_cmake.sh  libprim.pc.in
src/prim/: prim.h  prim_TEST.cc
